TestSuite/PascalABCTests/errors/err0205.pas
type TClass = class
procedure Test;
begin
  var p := @self;
end;
end;

begin
end.